--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,8 +1,6 @@
 :root {
-   --white: #FFFFFF;
-   --black: #000000;
-   --charleston-green: #212529;
-   --blue-violet: #502064;
-   --fuchsia-crayola: #CA61C3;
-   --cerise: #E43F6F;
+   --black: #212529;
+   --purple: #502064;
+   --light-pink: #CA61C3;
+   --pink: #E43F6F;
 }
