--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,7 +1,9 @@
-html {
-   font-size: 62.5%;
+* {
+   box-sizing: border-box;
+   margin: 0;
+   padding: 0;
 }
 
 body {
-   margin: 0;
+   font-family: 'Poppins', sans-serif;
 }
