Implement navigation between Login and Register modules

--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -67,6 +67,7 @@ header ul li a:hover {
    font-size: 3.5em;
    line-height: 1.4em;
    font-weight: 500;
+   text-align: left;
 }
 
 .content .textBox h2 span {
